Reactiaate and repurpose tests. Add comment to MessageHash as using toString for business logic is worrying. Inject MessageHashFactory so it can be mocked. Remove unrequired mocks.